<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Depression relief</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_comment">Add Comment</string>
    <string name="dot">•</string>
    <string name="battery_optimization">Battery Optimization</string>
    <string name="maybe_later">MAYBE LATER</string>
    <string name="battery_opt_description_settings"><![CDATA[Some android devices remove background apps to save battery if users don\'t explicitly turn OFF battery optimization. So we recommend turning OFF battery optimization for our app in system settings. This will prevent our app from closing or shutting off unexpectedly. 1010To do it, follow these steps. 10101) Click \"Turn off now\" below 102) Select \"All apps\" from top drop-down menu103) Find &amp; click our app104) Select \"Don’t optimize\"]]></string>
    <string name="turn_off">TURN OFF NOW</string>
    <string name="str_sound_name_bird">Bird</string>
    <string name="str_sound_name_cafe">Cafe</string>
    <string name="str_sound_name_cricket">Cricket</string>
    <string name="str_sound_name_distant_storm">Distant Storm</string>
    <string name="str_sound_name_driving">Driving</string>
    <string name="str_sound_name_fire">Fire</string>
    <string name="str_sound_name_flute">Flute</string>
    <string name="str_sound_name_frog">Frog</string>
    <string name="str_sound_name_guitar">Guitar</string>
    <string name="str_sound_name_heavy_rain">Heavy Rain</string>
    <string name="str_sound_name_light_rain">Light Rain</string>
    <string name="str_sound_name_meditation">Meditation</string>
    <string name="str_sound_name_owl">Owl</string>
    <string name="str_sound_name_peacock">Peacock</string>
    <string name="str_sound_name_piano">Piano</string>
    <string name="str_sound_name_rain">Rain</string>
    <string name="str_sound_name_rain_on_leaves">Rain on Leaves</string>
    <string name="str_sound_name_rain_on_roof">Rain on Roof</string>
    <string name="str_sound_name_rain_on_tent">Rain on Tent</string>
    <string name="str_sound_name_rain_on_window">Rain on Window</string>
    <string name="str_sound_name_thunder">Thunder</string>
    <string name="str_sound_name_thunder2">Thunder2</string>
    <string name="str_sound_name_tide">Tide</string>
    <string name="str_sound_name_umbrella_rain">Umbrella Rain</string>
    <string name="str_sound_name_urban_rain">Urban Rain</string>
    <string name="str_sound_name_wind">Wind</string>
    <string name="str_sound_name_wind_cat_purring">Cat Purring</string>
    <string name="str_sound_name_wind_chimes">Wind Chimes</string>
    <string name="str_sound_name_wind_seagulls">Seagulls</string>
    <string name="str_sound_name_wind_wolf">Wolf</string>
    <string name="str_theme_distance_storm">Distance Storm</string>
    <string name="str_theme_light_rain">Light Rain</string>
    <string name="str_theme_ocean_rain">Ocean Rain</string>
    <string name="str_theme_rain_crickets">Rain And Crickets</string>
    <string name="str_theme_rain_forest">Rain In Forest</string>
    <string name="str_theme_rain_on_leaves">Rain On Leaves</string>
    <string name="str_theme_rain_on_roof">Rain On Roof</string>
    <string name="str_theme_rain_on_tent">Rain On Tent</string>
    <string name="str_theme_rain_on_window">Rain On Window</string>
    <string name="str_theme_rain_piano">Rain With Piano</string>
    <string name="str_theme_rainy_day">Rainy Day</string>
    <string name="str_theme_rainy_evening">Rainy Evening</string>
    <string name="str_theme_spring_rain">Spring Rain</string>
    <string name="str_theme_summer_rain">Summer Rain</string>
    <string name="str_theme_thunderstorm">Thunder Storm</string>
    <string name="str_theme_umbrella">Under The Umbrella</string>
    <string name="str_theme_urban_rain">Urban Rain</string>
    <string name="str_theme_wind_rain">Wind And Rain</string>
    <string name="no_items">No items</string>
    <string name="timer">Timer</string>
    <string name="bedtime_reminder">Bedtime Reminder</string>
    <string name="it_s_time_for_bed">It\'s time for bed.</string>
    <string name="custom">Custom</string>
    <string name="custom_set_time_hour">Hour</string>
    <string name="roboto_light">roboto_light</string>
    <string name="custom_set_time_minute">Minute</string>
    <string name="cancel">Cancel</string>
    <string name="current_selection">Current Selection</string>
    <string name="all_sounds">All Sounds</string>
    <string name="reset">Reset</string>
    <string name="max_select_toast">You can select at most %s sounds</string>
    <string name="delete_success">Delete Sucess</string>
    <string name="delete">Delete</string>
    <string name="unlock_mix_hint">Watch a short video to get this premium mix</string>
    <string name="unlock_all_sounds">Unlock all sounds</string>
    <string name="count_time_zero">Timer</string>
    <string name="set_timer">Set Timer</string>
    <string name="off">Off</string>
    <string name="custom_timer">Custom Timer</string>
    <string name="set_success">Set successfully</string>
    <string name="set_time_hours">%s hours</string>
    <string name="set_time_mins">%s mins</string>
    <string name="set_time_one_hour">1 hour</string>
    <string name="bed_reminder_hint">Regular bedtime helps form healthy sleep habits</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="repeat">Repeat</string>
    <string name="bed_sunday">S</string>
    <string name="bed_monday">M</string>
    <string name="bed_tuesday">T</string>
    <string name="bed_wednesday">W</string>
    <string name="bed_thursday">T</string>
    <string name="bed_friday">F</string>
    <string name="bed_saturday">S</string>
    <string name="select_sounds">Selected Sounds</string>
    <string name="other_sounds">Other Sounds</string>
    <string name="profile_type">Profile Type</string>
    <string name="prof_description">Select your profile type based on your preferences.</string>
    <string name="add_assesment">Assessment</string>
    <string name="mood_track">Mood Tracker</string>
    <string name="mood_report">Mood Report</string>
    <string name="general_wellbeing_assistent">General Wellbeing Assessment</string>
    <string name="performance_advisor">Performance Advisor</string>
    <string name="des_wellbeing">Personalized Guidance Based on Your Assessment Performance</string>
    <string name="excellent_wellbeing"> • Congratulations on maintaining excellent wellbeing! Keep up the good work. \n\n • Maintain your healthy habits and continue engaging in activities that bring you joy and fulfillment. \n\n • Consider helping others or giving back to your community to enhance your sense of purpose even further. \n\n • Remember to take breaks and practice self-care regularly to sustain your high level of wellbeing.</string>
    <string name="critical_wellbeing"> • Your wellbeing appears to be severely impacted, and its crucial to take immediate action.\n\n • Reach out to a mental health professional or crisis helpline for immediate support and guidance.\n\n • Remember that its okay to ask for help and that there are resources available to support you through difficult times.\n\n • Take small steps towards self-care, such as getting enough rest, eating nourishing foods, and avoiding substances that may exacerbate your situation.\n\n • Surround yourself with supportive individuals who can offer encouragement and assistance as you work towards improving your wellbeing.</string>
    <string name="des_contact_doctor">For personalized guidance and improved performance, contact our doctors today.</string>
    <string name="poor_wellbeing"> • It seems like you are struggling with several aspects of your wellbeing.\n\n • Dont hesitate to reach out for support from trusted individuals or seek professional help if needed.\n\n • Focus on prioritizing self-care activities and addressing any underlying issues contributing to your low mood or stress levels.\n\n • Consider making lifestyle changes, such as improving sleep habits, increasing physical activity, or seeking therapy, to improve your overall wellbeing.</string>
    <string name="fair_wellbeing"> • Your wellbeing is average, but there is room for improvement in various areas.\n\n • Identify specific areas of your life that need attention, such as stress management, social connections, or physical health.\n\n • Take proactive steps to address any concerns or challenges you are facing, whether its seeking support from friends, family, or professionals.\n\n • Experiment with different strategies to find what works best for you in terms of improving your mood and overall wellbeing.</string>
    <string name="good_wellbeing"> • You are doing well overall, but there might be some areas you could improve.\n\n • Focus on managing stress effectively through relaxation techniques, exercise, or mindfulness practices.\n\n • Make sure to maintain a healthy work-life balance and prioritize activities that contribute positively to your overall happiness.\n\n • Seek out opportunities for personal growth and development to further enhance your wellbeing.</string>
    <string name="affermation">Affermation</string>
    <string name="affermation_str_1">\"I am greatful for my body and all that it does for me\"</string>
    <string name="affermation_str_2">\"I am surrounded by love and positivity.\"</string>
    <string name="affermation_str_3">\"I trust the journey of my life.\"</string>
    <string name="affermation_str_4">\"Every day is a new opportunity for growth and happiness.\"</string>
    <string name="affermation_str_5">\"I am resilient, and I can overcome any challenge.\"</string>
    <string name="affermation_str_6">\"I radiate confidence, self-respect, and inner harmony.\"</string>
    <string name="affermation_str_7">\"My possibilities are endless.\"</string>
    <string name="affermation_str_8">\"I am grateful for the beauty that each day brings.\"</string>
    <string name="affermation_str_9">\"I attract success, abundance, and prosperity.\"</string>
    <string name="affermation_str_10">\"I am deserving of all the good things life has to offer.\"</string>
    <string name="affermation_str_11">\"I choose happiness over fear.\"</string>
    <string name="affermation_str_12">\"I am at peace with my past, present, and future.\"</string>
    <string name="affermation_str_13">\"My mind is filled with positive and loving thoughts.\"</string>
    <string name="affermation_str_14">\"I am a magnet for miracles.\"</string>
    <string name="affermation_str_15">\"I am constantly evolving and growing.\"</string>
    <string name="affermation_str_16">\"I am a beacon of light and positivity.\"</string>
    <string name="affermation_str_17">\"I am in control of my thoughts and emotions.\"</string>
    <string name="affermation_str_18">\"I am worthy of love and kindness.\"</string>
    <string name="affermation_str_19">\"I release all negativity and embrace joy and positivity.\"</string>
    <string name="affermation_str_20">\"I am a source of inspiration for others.\"</string>
    <string name="affermation_str_21">\"I am enough just as I am.\"</string>
    <string name="journal">Journal</string>
    <string name="belive_in_yourself">\"Believe in yourself; you\'re the architect of your brighter future.\"</string>
    <string name="event_management">Event Management</string>
    <string name="event">Event</string>
    <string name="select_specialization">Specialisation</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="marathi">Marathi</string>
    <string name="gujarati">Gujarati</string>
    <string name="spanish">Spanish</string>
    <string name="german">German</string>
    <string name="select_experience">Experience</string>
    <string name="self_description">About your self</string>
</resources>