<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".moodtracker.MoodReportActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:padding="@dimen/_5sdp"
                    android:src="@drawable/ic_back2" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/josefin_regular"
                    android:text="@string/mood_report"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_16ssp" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_30sdp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/quality_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginBottom="@dimen/_2sdp"
                        android:fontFamily="@font/lato_light"
                        android:text="Quality"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/_18ssp" />

                    <TextView
                        android:id="@+id/mood_score"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:fontFamily="@font/josefin_regular"
                        android:text="50.23%"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/_32ssp" />
                </LinearLayout>

                <ProgressBar
                    android:id="@+id/progress_bar"
                    style="@style/CircularDeterminateProgressBar"
                    android:layout_width="@dimen/_270sdp"
                    android:layout_height="@dimen/_270sdp"
                    android:layout_centerInParent="true"
                    android:indeterminateOnly="false"
                    android:progress="50"
                    android:progressDrawable="@drawable/circle"
                    android:rotation="0"
                    tools:progress="50" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_tips_bg"
                android:orientation="vertical"
                android:paddingVertical="@dimen/_5sdp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginHorizontal="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:fontFamily="@font/josefin_regular"
                    android:gravity="center_horizontal"
                    android:text="@string/general_wellbeing_assistent"
                    android:textColor="@color/textcolor"
                    android:textSize="@dimen/_19ssp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="@dimen/_8sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:background="@drawable/roundbg"
                    android:elevation="@dimen/_10sdp"
                    android:orientation="vertical"
                    android:outlineAmbientShadowColor="@color/black"
                    android:outlineSpotShadowColor="@color/black">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/josefin_regular"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:text="@string/performance_advisor"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/_19ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/josefin_regular"
                        android:gravity="center_horizontal"
                        android:padding="@dimen/_3sdp"
                        android:text="@string/des_wellbeing"
                        android:textColor="@color/textcolorhint"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:id="@+id/txt_wellbeing"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:fontFamily="@font/josefin_regular"
                        android:lineSpacingExtra="@dimen/_2sdp"
                        android:text="@string/excellent_wellbeing"
                        android:textColor="@color/textcolor"
                        android:textSize="@dimen/_12ssp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginHorizontal="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:layout_marginBottom="@dimen/_15sdp"
                        android:fontFamily="@font/josefin_regular"
                        android:gravity="center_horizontal"
                        android:text="@string/des_contact_doctor"
                        android:textAlignment="gravity"
                        android:textColor="@color/textcolorhint"
                        android:textSize="@dimen/_11ssp" />

                </LinearLayout>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_120sdp"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:src="@drawable/ic_seminar_series" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>